JEP code is now in Java 20
Fix bad NULL check in engine (leftover from Java 19 conversion).
More API renaming, MemorySession -> SegmentScope.
Cleanup variable names.
Update docs since using the experimental JVM is not needed.
I suppose there will be many more API changes ;)